<resources>
    <string name="app_name">RestTec</string>
    <string name="pelicula">Cartelera</string>
    <string name="sucursal">Comprar</string>
    <string name="iniciar_S">Iniciar Sesion</string>
    <string name="registro">Registrarse</string>
    <string name="S1">Oxigeno, Heredia</string>
    <string name="S2">Multiplaza Escazu</string>
    <string name="S3">Peseo Metropoli</string>
    <string name="S4">Plaza Lincon</string>
    <string name="S5">Terramall</string>
    <string name="S6">Cine Magaly</string>
    <string name="back">->Volver</string>
    <string name="username">->Usuario</string>
    <string name="password">->Contraseña</string>
    <string name="admin">ADMIN</string>
    <string name="Rpelis">Registro Peliculas</string>
    <string name="Rsucursales">Registro Sucursales</string>
    <string name="Rsalas">Registro Salas</string>
    <string name="AsigProyecc">Asignacion de Proyecciones</string>
    <string name="clasification">Clasificacion</string>
    <string name="director">Director</string>
    <string name="characters">Protagonistas</string>
    <string name="duration">Tiempo de duracion</string>
    <string name="OgName">Nombre Original</string>
    <string name="CmName">Nombre Comercial</string>
    <string name="register">Registrar</string>
    <string name="operacion">Operacion realizada con exito.</string>
    <string name="registar">Agregar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="consult">Consultar</string>
    <string name="salas">Numero de Salas</string>
    <string name="name">Nombre</string>
    <string name="ubi">Ubicacion</string>
    <string name="id">ID</string>
    <string name="Sname">Nombre de sucursal</string>
    <string name="filas">Filas</string>
    <string name="columnas">Columnas</string>
    <string name="capacity">Capacidad</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha</string>
    <string name="sala">Sala</string>
    <string name="peli">Pelicula</string>
    <string name="P1">Pelicula 1</string>
    <string name="P2">Pelicula 2</string>
    <string name="P3">Pelicula 3</string>
    <string name="P4">Pelicula 4</string>
    <string name="P5">Pelicula 5</string>

</resources>