<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminProcc.deleteProcc">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:src="@mipmap/ic_launcher_foreground"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/hora"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/username"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/teal"
            android:hint="@string/hora"
            android:inputType="datetime"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="Autofill,ObsoleteLayoutParam,TextContrastCheck,VisualLintTextFieldSize" />
        <EditText
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/username"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/teal"
            android:hint="@string/fecha"
            android:inputType="date"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="Autofill,ObsoleteLayoutParam,TextContrastCheck,VisualLintTextFieldSize" />
        <EditText
            android:id="@+id/sala"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/username"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/teal"
            android:hint="@string/sala"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="Autofill,ObsoleteLayoutParam,TextContrastCheck,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@color/buttons"
            android:onClick="onClickRegister"
            android:text="@string/eliminar"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            tools:ignore="ObsoleteLayoutParam,TextContrastCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/back"
            android:layout_width="198dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round"
            android:onClick="onClickBack"
            android:text="@string/back"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>