<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sesionScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        tools:ignore="UselessParent">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:src="@mipmap/ic_launcher_foreground"
        tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_below="@+id/profile_image"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/teal"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="Autofill,ObsoleteLayoutParam,TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/username"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/teal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="Autofill,ObsoleteLayoutParam,TextContrastCheck,VisualLintTextFieldSize" />

        <!--Botón de inicio de sesión-->
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:background="@color/buttons"
            android:onClick="onClickIniciarSesion"
            android:text="@string/iniciar_S"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            tools:ignore="ObsoleteLayoutParam,TextContrastCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/back"
            android:layout_width="249dp"
            android:layout_height="50dp"
            android:layout_below="@+id/password"
            android:layout_gravity="center"
            android:layout_marginTop="250dp"
            android:background="@drawable/round"
            android:onClick="onClickBack"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            tools:ignore="ObsoleteLayoutParam,TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>