<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminSucursal.deleteSucursal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        tools:ignore="UselessParent">
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@mipmap/ic_launcher_foreground"
        tools:ignore="ContentDescription" />
    <EditText
        android:id="@+id/Iname"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_below="@+id/profile_image"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="0dp"
        android:background="@color/teal"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:ignore="Autofill,ObsoleteLayoutParam,TextContrastCheck,VisualLintTextFieldSize" />
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@color/buttons"
            android:onClick="OnClickRegister"
            android:text="@string/eliminar"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            tools:ignore="ObsoleteLayoutParam,TextContrastCheck,VisualLintButtonSize" />
        <Button
            android:id="@+id/back"
            android:layout_width="198dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:background="@drawable/round"
            android:onClick="onClickBack"
            android:text="@string/back"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>